--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,50 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="SoundE.css">
+    <link rel="stylesheet" href="/css/SoundE.css">
     <title>SoundE</title>
 </head>
 
 <body>
 <header>
-    <img src="./media/Logo-ConFondol.png" alt="header-logo" class="logo">
-    <img src="./media/search.svg" alt="" srcset="">
+    <img src="/img/Logo-ConFondol.png" alt="header-logo" class="logo">
+    <img src="/img/search.svg" alt="" srcset="">
     <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?">
-    <img src="./media/icon.svg" alt="">
+    <img src="/img/icon.svg" alt="">
     <div class="header-hr"></div>
 </header>
 <main>
     <section class="recents"> <!--Esta seccion es un grid -->
         <div class="recents__container">
-            <img src="./media/cover9.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/cover9.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">5TA Dimension</p>
         </div>
         <div class="recents__container">
-            <img src="./media/cover2.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/cover2.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Nirvana</p>
         </div>
         <div class="recents__container">
-            <img src="./media/cover3.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/cover3.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Jhon China</p>
         </div>
         <div class="recents__container">
-            <img src="./media/cover4.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/cover4.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Red Sun In The Sky</p>
         </div>
         <div class="recents__container">
-            <img src="./media/cover5.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/cover5.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">HUNNY Vowels</p>
         </div>
         <div class="recents__container">
-            <img src="./media/cover6.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/cover6.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Eminem</p>
         </div>
         <div class="recents__container hidden">
-            <img src="./media/cover7.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/cover7.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Gorillaz</p>
         </div>
         <div class="recents__container hidden">
-            <img src="./media/cover8.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/cover8.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Graduation</p>
         </div>
     </section>
@@ -59,47 +59,47 @@
         </header>
         <article class="music-container__scroll">
             <div class="music-container__scroll__song">
-                <img src="./media/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover3.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover3.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Jhon China</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover8.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover8.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Graduation</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover4.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover4.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Red sun in the sky</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover9.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover9.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">5TA Dimension</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover5.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover5.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">HUNNY Vowles</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
         </article>
@@ -112,47 +112,47 @@
         </header>
         <article class="music-container__scroll">
             <div class="music-container__scroll__song">
-                <img src="./media/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover3.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover3.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Jhon China</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover8.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover8.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Graduation</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover4.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover4.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Red sun in the sky</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover9.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover9.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">5TA Dimension</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover5.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover5.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">HUNNY Vowles</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
         </article>
@@ -165,47 +165,47 @@
         </header>
         <article class="music-container__scroll">
             <div class="music-container__scroll__song">
-                <img src="./media/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover3.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover3.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Jhon China</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover8.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover8.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Graduation</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover4.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover4.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Red sun in the sky</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover9.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover9.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">5TA Dimension</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover5.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover5.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">HUNNY Vowles</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
         </article>
@@ -218,55 +218,55 @@
         </header>
         <article class="music-container__scroll">
             <div class="music-container__scroll__song">
-                <img src="./media/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover3.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover3.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Jhon China</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover8.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover8.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Graduation</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover4.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover4.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Red sun in the sky</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover9.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover9.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">5TA Dimension</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover5.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover5.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">HUNNY Vowles</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="./media/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
         </article>
     </section>
     <footer>
-        <img src="./media/search.svg" alt="" srcset="">
-        <img src="./media/icon.svg" alt="">
-        <img src="./media/home.svg">
+        <img src="/img/search.svg" alt="" srcset="">
+        <img src="/img/icon.svg" alt="">
+        <img src="/img/home.svg">
     </footer>
 </main>
 </body>
