--- a/src/main/resources/static/css/SoundE.css
+++ b/src/main/resources/static/css/SoundE.css
@@ -24,7 +24,7 @@
 }
 
 body {
-    margin: 0 20px; /* retocar */
+    margin: 0 20px;
     background-color: black;
     color: white;
 }
@@ -41,18 +41,29 @@ h1 {
 }
 
 header {
+    justify-self: center;
+    width: 80%;
     margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    gap: 20px
+    gap: 5%;
+}
+
+.barra {
+    display: none;
+}
+
+.icono {
+    display: none;
 }
 
 .header-hr {
+    justify-self: center;
     width: 70%;
-    background-color: gray;
+    background-color: grey;
     height: 1px;
+    margin-top: 30px;
     margin-bottom: 30px;
 }
 
@@ -61,7 +72,6 @@ header {
     display: grid;
     grid-template-columns: repeat(8,1fr);
     gap: 10px;
-    margin-bottom: 20px;
 }
 
 .recents__container {
@@ -107,12 +117,66 @@ footer {
     align-items: center;
     justify-content: space-around;
     padding-bottom: 5px;
-    background: linear-gradient(rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.65), black);
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8), rgba(0, 0, 0,1),black);
 }
 
 @media (min-width: 960px) {
+   
+    header {
+        justify-content: space-between;
+    }
+
     .logo {
-        max-width: 100px;
+        margin-left: 20%;
+        max-width: 80px;
+        height: 40px;
+    }
+    
+    .barra { /*div que contiene el input y los dos iconos (lupa y biblioteca)*/
+        background-color: white;
+        position: relative;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        width: 80%;
+        padding: 0 10px;
+    }
+
+    .barra .dualupa{ /*icono de lupa*/
+        width: 23px;
+        height: 23px;
+    }
+
+    .barra .libro{ /*icono de libro, biblioteca o como vrgas le quieran llamar*/
+        width: 23px;
+        height: 23px;
+        padding-left:20px;
+        border-left: 2px solid;
+        border-color: #8c8c8c;
+    }
+
+    .barra input { /*esta pertenece a la barra de buscador*/
+        margin-left: 2%;
+        text-align: left;
+        width: 400px;
+        height: 40px;
+        border: 0;
+        font-size: 1.2em;
+        box-sizing: border-box;
+    }
+    
+    input:focus{
+        outline: none;
+        border: none;
+    }
+    
+    .icono{ /*este pertenece al icono que se parece a Ronaldo Nazario cuando estaba en su prime, que jugadorazo!!!*/
+        margin-right: 20%;
+        display: block;
+        height: 40px;
+        width: 40px;
     }
 
     .recents {
@@ -133,16 +197,16 @@ footer {
     }
 
     .music-container__scroll {
-        gap: 20px;
+        gap: 30px;
     }
 
     .music-container img {
         width: 170px;
-        height: 170px;  
+        height: 170px;
     }
 
     footer > img {
-        width: 50px;
+        display: none;
     }
 
     .music-container__scroll {
@@ -161,7 +225,7 @@ footer {
         z-index: -1;
         top: 0;
         left: -5px;
-        border-radius: 8px; 
+        border-radius: 8px;
         transition: width linear, height linear;
     }
 
@@ -195,7 +259,6 @@ footer {
 @media (max-width: 600px) {
     .logo {
         max-width: 80px;
-        fle
     }
 
     .recents {
