--- a/src/main/resources/templates/principalPage.html
+++ b/src/main/resources/templates/principalPage.html
@@ -11,10 +11,10 @@
 
 <body>
 <header>
-  <img src="/img/Logo-ConFondol.png" alt="header-logo" class="logo">
-  <img src="/img/search.svg" alt="" srcset="">
+  <img src="/img/icons/Logo-ConFondol.png" alt="header-logo" class="logo">
+  <img src="/img/icons/search.svg" alt="" srcset="">
   <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?">
-  <img src="/img/icon.svg" alt="">
+  <img src="/img/icons/icon.svg" alt="">
   <div class="header-hr"></div>
 </header>
 <main>
@@ -37,9 +37,9 @@
     </article>
   </section>
   <footer>
-    <img src="/img/search.svg" alt="" srcset="">
-    <img src="/img/icon.svg" alt="">
-    <img src="/img/home.svg">
+    <img src="/img/icons/search.svg" alt="" srcset="">
+    <img src="/img/icons/icon.svg" alt="">
+    <img src="/img/icons/home.svg">
   </footer>
 </main>
 </body>
