--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,47 +11,47 @@
 
 <body>
 <header>
-    <img src="/img/Logo-ConFondol.png" alt="header-logo" class="logo">
+    <img src="/img/icons/Logo-ConFondol.png" alt="header-logo" class="logo">
     <div class="barra">
-        <img src="/img/lupa-gray.png" alt="" class="dualupa">
+        <img src="/img/icons/lupa-gray.png" alt="" class="dualupa">
         <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?" onfocus="this.placeholder=''" onblur="this.placeholder='¿Qué te apetece escuchar?'">
-        <img src="/img/libro-gray.png" alt="" class="libro">
+        <img src="/img/icons/libro-gray.png" alt="" class="libro">
     </div>
-    <img src="/img/icon.svg" alt="" class="icono">
+    <img src="/img/icons/icon.svg" alt="" class="icono">
 </header>
 <div class="header-hr"></div>
 <main>
     <section class="recents"> <!--Esta seccion es un grid -->
         <div class="recents__container">
-            <img src="/img/cover9.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/examples/examples/cover9.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">5TA Dimension</p>
         </div>
         <div class="recents__container">
-            <img src="/img/cover2.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/examples/examples/cover2.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Nirvana</p>
         </div>
         <div class="recents__container">
-            <img src="/img/cover3.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/examples/cover3.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Jhon China</p>
         </div>
         <div class="recents__container">
-            <img src="/img/cover4.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/examples/cover4.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Red Sun In The Sky</p>
         </div>
         <div class="recents__container">
-            <img src="/img/cover5.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/examples/cover5.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">HUNNY Vowels</p>
         </div>
         <div class="recents__container">
-            <img src="/img/cover6.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/examples/cover6.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Eminem</p>
         </div>
         <div class="recents__container hidden">
-            <img src="/img/cover7.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/examples/cover7.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Gorillaz</p>
         </div>
         <div class="recents__container hidden">
-            <img src="/img/cover8.jpg" alt="ejemplo" class="recents__container-picture">
+            <img src="/img/examples/cover8.jpg" alt="ejemplo" class="recents__container-picture">
             <p class="recents__container-songname">Graduation</p>
         </div>
     </section>
@@ -64,47 +64,47 @@
         </header>
         <article class="music-container__scroll">
             <div class="music-container__scroll__song">
-                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover3.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover3.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Jhon China</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover8.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover8.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Graduation</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover4.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover4.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Red sun in the sky</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover9.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover9.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">5TA Dimension</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover5.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover5.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">HUNNY Vowles</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
         </article>
@@ -118,47 +118,47 @@
         </header>
         <article class="music-container__scroll">
             <div class="music-container__scroll__song">
-                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover3.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover3.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Jhon China</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover8.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover8.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Graduation</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover4.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover4.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Red sun in the sky</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover9.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover9.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">5TA Dimension</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover5.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover5.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">HUNNY Vowles</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
         </article>
@@ -172,47 +172,47 @@
         </header>
         <article class="music-container__scroll">
             <div class="music-container__scroll__song">
-                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover3.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover3.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Jhon China</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover8.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover8.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Graduation</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover4.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover4.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Red sun in the sky</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover9.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover9.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">5TA Dimension</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover5.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover5.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">HUNNY Vowles</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
         </article>
@@ -226,55 +226,55 @@
         </header>
         <article class="music-container__scroll">
             <div class="music-container__scroll__song">
-                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover3.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover3.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Jhon China</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover8.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover8.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Graduation</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover4.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover4.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Red sun in the sky</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover9.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover9.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">5TA Dimension</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover5.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover5.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">HUNNY Vowles</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover7.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover7.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Gorillaz</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover2.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover2.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Nirvana</p>
             </div>
             <div class="music-container__scroll__song">
-                <img src="/img/cover6.jpg" alt="" class="music-container__scroll__song-img">
+                <img src="/img/examples/cover6.jpg" alt="" class="music-container__scroll__song-img">
                 <p class="music-container__scroll__song-subtitle">Eminem</p>
             </div>
         </article>
     </section>
     <footer>
-        <img src="/img/search.svg" alt="" srcset="">
-        <img src="/img/icon.svg" alt="">
-        <img src="/img/home.svg">
+        <img src="/img/icons/search.svg" alt="" srcset="">
+        <img src="/img/icons/icon.svg" alt="">
+        <img src="/img/icons/home.svg">
     </footer>
 </main>
 </body>
