--- a/src/main/resources/templates/playlistPageTL.html
+++ b/src/main/resources/templates/playlistPageTL.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <header>
-  <img src="/img/Logo-ConFondol.png" alt="header-logo" class="logo">
+  <img src="/img/icons/Logo-ConFondol.png" alt="header-logo" class="logo">
   <div class="barra">
-    <img src="/img/lupa-gray.png" alt="" class="dualupa">
+    <img src="/img/icons/lupa-gray.png" alt="" class="dualupa">
     <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?" onfocus="this.placeholder=''" onblur="this.placeholder='¿Qué te apetece escuchar?'">
-    <img src="/img/libro-gray.png" alt="" class="libro">
+    <img src="/img/icons/libro-gray.png" alt="" class="libro">
   </div>
-  <img src="/img/icon.svg" alt="" class="icono">
+  <img src="/img/icons/icon.svg" alt="" class="icono">
 </header>
 <main>
   <div class="album-container">
@@ -37,9 +37,9 @@
   </div>
 </main>
 <footer>
-  <img src="/img/search.svg" alt="" srcset="">
-  <img src="/img/icon.svg" alt="">
-  <img src="/img/home.svg">
+  <img src="/img/icons/search.svg" alt="" srcset="">
+  <img src="/img/icons/icon.svg" alt="">
+  <img src="/img/icons/home.svg">
 </footer>
 </body>
 </html>
