--- a/src/main/resources/templates/playlistPage.html
+++ b/src/main/resources/templates/playlistPage.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Álbum Musical</title>
-    <link rel="stylesheet" href="./Common.css">
-    <link rel="stylesheet" href="./PlaylistPage.css">
+    <link rel="stylesheet" href="/css/Common.css">
+    <link rel="stylesheet" href="/css/PlaylistPage.css">
 </head>
+<style>
+    body {
+        margin: 0 10%;
+    }
+</style>
 <body>
 <header>
     <img src="/img/icons/Logo-ConFondol.png" alt="header-logo" class="logo">
@@ -32,36 +37,36 @@
         </div>
         <section class="tracklist">
             <article class="song">
-                <p>Happily</p>
-                <h3>One Direction</h3>
+                <h2>Happily</h2>
+                <p>One Direction</p>
             </article>
             <article class="song">
-                <p>Strong</p>
-                <h3>One Direction</h3>
+                <h2>Strong</h2>
+                <p>One Direction</p>
             </article>
             <article class="song">
-                <p>Right Now</p>
-                <h3>One Direction</h3>
+                <h2>Right Now</h2>
+                <p>One Direction</p>
             </article>
             <article class="song">
-                <p>Alive</p>
-                <h3>One Direction</h3>
+                <h2>Alive</h2>
+                <p>One Direction</p>
             </article>
             <article class="song">
-                <p>Through the Dark</p>
-                <h3>One Direction</h3>
+                <h2>Through the Dark</h2>
+                <p>One Direction</p>
             </article>
             <article class="song">
-                <p>Story of My Life</p>
-                <h3>One Direction</h3>
+                <h2>Story of My Life</h2>
+                <p>One Direction</p>
             </article>
             <article class="song">
-                <p>Something Great</p>
-                <h3>One Direction</h3>
+                <h2>Something Great</h2>
+                <p>One Direction</p>
             </article>
             <article class="song">
-                <p>Does He Know?</p>
-                <h3>One Direction</h3>
+                <h2>Does He Know?</h2>
+                <p>One Direction</p>
             </article>
         </section>
     </div>
