--- a/src/main/resources/static/css/PlaylistPage.css
+++ b/src/main/resources/static/css/PlaylistPage.css
@@ -9,11 +9,10 @@ header {
     position: sticky;
     top: 0;
     z-index: 1;
+    background: linear-gradient(black, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5), rgba(0, 0, 0,0));
 }
 
 main {
-    display: flex;
-    flex-direction: column;
     margin-top: 10px;
 }
 
@@ -35,6 +34,15 @@ main {
     align-self: start;
     justify-content: center;
     margin-top: 20px;
+}
+
+h2 {
+    font-weight: 400;
+}
+
+h2 + p {
+    font-size:1.1em;
+    color: #aaa9a9;
 }
 
 .artist-info {
@@ -75,15 +83,20 @@ main {
 
 @media (max-width: 960px) {
 
+        .album-container {
+            display: flex;
+            flex-direction: column;
+        }
+
         .album-header {
             display: flex;
             flex-direction: column;
-            margin-top: 270px;
-            margin-left: 100px;
+            margin-top: 100px;
+            margin-left: 1%;
         }
 
         .album-cover{
-            margin-left: 50px;
+            margin-left: 5%;
         }
 
         .play-button{
@@ -97,8 +110,17 @@ main {
         .tracklist {
             display: flex;
             flex-direction: column;
-            margin-top: -450px;
-            margin-left: 550px;
+            margin-top: -375px;
+            margin-left: 65%;
+            width: 200px;
+            height: 400px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            align-self: center;
+        }
+
+        footer {
+            margin-top: 95px;
         }
 }
 
