--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta username="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/PrincipalPage.css">
     <link rel="stylesheet" href="/css/Common.css">
     <title>SoundE</title>
