--- a/src/main/resources/templates/playlistPage.html
+++ b/src/main/resources/templates/playlistPage.html
@@ -7,29 +7,24 @@
     <link rel="stylesheet" href="/css/Common.css">
     <link rel="stylesheet" href="/css/PlaylistPage.css">
 </head>
-<style>
-    body {
-        margin: 0 10%;
-    }
-</style>
 <body>
 <header>
-    <img src="/img/Logo-ConFondol.png" alt="header-logo" class="logo">
+    <img src="/img/icons/Logo-ConFondol.png" alt="header-logo" class="logo">
     <div class="barra">
-        <img src="/img/lupa-gray.png" alt="" class="dualupa">
+        <img src="/img/icons/lupa-gray.png" alt="" class="dualupa">
         <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?" onfocus="this.placeholder=''" onblur="this.placeholder='¿Qué te apetece escuchar?'">
-        <img src="/img/libro-gray.png" alt="" class="libro">
+        <img src="/img/icons/libro-gray.png" alt="" class="libro">
     </div>
-    <img src="/img/icon.svg" alt="" class="icono">
+    <img src="/img/icons/icon.svg" alt="" class="icono">
 </header>
 <main>
     <div class="album-container">
         <div class="album-header">
-            <img src="/img/cover8.jpg" alt="Portada del álbum" class="album-cover">
+            <img src="/img/covers.examples/cover8.jpg" alt="Portada del álbum" class="album-cover">
             <div class="album-info">
                 <h1>Midnight memories</h1>
                 <div class="artist-info">
-                    <img src="/img/icon.svg" alt="Foto del artista" class="artist-photo">
+                    <img src="/img/icons/icon.svg" alt="Foto del artista" class="artist-photo">
                     <p>One Direction | 2013</p>
                 </div>
             </div>
@@ -72,9 +67,9 @@
     </div>
 </main>
 <footer>
-    <img src="/img/search.svg" alt="" srcset="">
-    <img src="/img/icon.svg" alt="">
-    <img src="/img/home.svg">
+    <img src="/img/icons/search.svg" alt="" srcset="">
+    <img src="/img/icons/icon.svg" alt="">
+    <img src="/img/icons/home.svg">
 </footer>
 </body>
 </html>
