--- a/src/main/resources/templates/playlistPage.html
+++ b/src/main/resources/templates/playlistPage.html
@@ -31,38 +31,62 @@
             <button class="play-button">▶</button>
         </div>
         <section class="tracklist">
-            <article class="song">
-                <h2>Happily</h2>
-                <p>One Direction</p>
-            </article>
-            <article class="song">
-                <h2>Strong</h2>
-                <p>One Direction</p>
-            </article>
-            <article class="song">
-                <h2>Right Now</h2>
-                <p>One Direction</p>
-            </article>
-            <article class="song">
-                <h2>Alive</h2>
-                <p>One Direction</p>
-            </article>
-            <article class="song">
-                <h2>Through the Dark</h2>
-                <p>One Direction</p>
-            </article>
-            <article class="song">
-                <h2>Story of My Life</h2>
-                <p>One Direction</p>
-            </article>
-            <article class="song">
-                <h2>Something Great</h2>
-                <p>One Direction</p>
-            </article>
-            <article class="song">
-                <h2>Does He Know?</h2>
-                <p>One Direction</p>
-            </article>
+            <div class="image">
+                <img src="/img/covers.examples/cover2.jpg" alt="Song1" class="song-cover">
+                <article class="song">
+                    <h2>Happily</h2>
+                    <p>One Direction</p>
+                </article>
+            </div>
+            <div class="image">
+                <img src="/img/covers.examples/cover2.jpg" alt="Song2" class="song-cover">
+                <article class="song">
+                    <h2>Strong</h2>
+                    <p>One Direction</p>
+                </article>
+            </div>
+            <div class="image">
+                <img src="/img/covers.examples/cover2.jpg" alt="Song3" class="song-cover">
+                <article class="song">
+                    <h2>Right Now</h2>
+                    <p>One Direction</p>
+                </article>
+            </div>
+            <div class="image">
+                <img src="/img/covers.examples/cover2.jpg" alt="Song4" class="song-cover">
+                <article class="song">
+                    <h2>Alive</h2>
+                    <p>One Direction</p>
+                </article>
+            </div>
+            <div class="image">
+                <img src="/img/covers.examples/cover2.jpg" alt="Song5" class="song-cover">
+                <article class="song">
+                    <h2>Through the Dark</h2>
+                    <p>One Direction</p>
+                </article>
+            </div>
+            <div class="image">
+                <img src="/img/covers.examples/cover2.jpg" alt="Song6" class="song-cover">
+                <article class="song">
+                    <h2>Story of My Life</h2>
+                    <p>One Direction</p>
+                </article>
+            </div>
+            <div class="image">
+                <img src="/img/covers.examples/cover2.jpg" alt="Song7" class="song-cover">
+                <article class="song">
+                    <h2>Something Great</h2>
+                    <p>One Direction</p>
+                </article>
+            </div>
+            <div class="image">
+                <img src="/img/covers.examples/cover2.jpg" alt="Song8" class="song-cover">
+                <article class="song">
+                    <h2>Does He Know?</h2>
+                    <p>One Direction</p>
+                </article>
+            </div>
         </section>
     </div>
 </main>
