--- a/src/main/resources/templates/songPageTL.html
+++ b/src/main/resources/templates/songPageTL.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title th:text="${song.name}">Cancion</title>
+    <link rel="stylesheet" href="/css/Common.css">
+    <link rel="stylesheet" href="/css/SongPage.css">
 </head>
 <body>
-$END$
+<header th:replace="~{fragments/header :: header}"></header>
+<div class="header-hr"></div>
+<main>
+    <div class="album-container">
+        <div class="album-header">
+            <img th:src="|/files/song/${song.imgPath}|" alt="Portada de la cancion" class="album-cover">
+            <div class="album-info">
+                <h1 th:text="${song.name}">Midnight Memories</h1>
+                <div class="artist-info">
+                    <img src="/img/icons/icon.svg" alt="Foto del artista" class="artist-photo">
+                    <p th:text="${song.artist} + ' | ' + ${song.dateCreate}">One Direction | 2013</p>
+                </div>
+            </div>
+            <button class="play-button">▶</button>
+        </div>
+    </div>
+    <article class="song">
+        <h2 th:text="${song.name}">Happily</h2>
+        <p th:text="${song.artist}">One Direction</p>
+    </article>
+</main>
+<footer th:replace="~{fragments/footer :: footer}"></footer>
 </body>
 </html>
