--- a/src/main/resources/templates/songPageTL.html
+++ b/src/main/resources/templates/songPageTL.html
@@ -13,7 +13,7 @@
 <main>
     <div class="album-container">
         <div class="album-header">
-            <img th:src="|/files/song/${song.imgPath}|" alt="Portada de la cancion" class="album-cover">
+            <img th:src="|/files/Song/${song.imgPath}|" alt="Portada de la cancion" class="album-cover">
             <div class="album-info">
                 <h1 th:text="${song.name}">Midnight Memories</h1>
                 <div class="artist-info">
