Feature/cambios front (#316)

--- a/src/main/resources/templates/playlistpage/playlistpage.html
+++ b/src/main/resources/templates/playlistpage/playlistpage.html
@@ -16,7 +16,7 @@
       <div class="album-info">
         <h1 th:text="${playlist.name}">Midnight Memories</h1>
         <div class="artist-info">
-          <img src="/img/icons/icon.svg" alt="Foto del artista" class="artist-photo">
+          <img th:src="@{|/files/artist/${playlist.artistImgPath}|}" alt="Foto del artista" class="artist-photo">
           <p th:text="${playlist.artist} + ' | ' + ${playlist.dateCreate}">One Direction | 2013</p>
         </div>
       </div>
