--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,21 @@
 <footer th:fragment="footer" xmlns:th="http://www.w3.org/1999/xhtml">
-    <img src="/img/icons/home.svg">
+    <svg class="home" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 17 17">
+        <g>
+        </g>
+        <path d="M14 16h-3v-6h-5v6h-3v-9h-1v10h13v-10h-1v9zM7 16v-5h3v5h-3zM16.796 6.473l-0.592 0.807-7.704-5.66-7.704 5.658-0.592-0.806 8.296-6.092 8.296 6.093z" fill="currentColor" />
+    </svg>
     <img src="/img/icons/icon.svg" alt="">
     <img src="/img/icons/search.svg" alt="" srcset="">
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+          if (window.location.href === 'http://localhost:8080/' || window.location.pathname === '/') {
+            const homeIcon = document.querySelector('svg.home');
+
+            if (homeIcon) {
+              homeIcon.style.color = '#d103d1';
+            }
+          }
+        });
+    </script>
 </footer>
