--- a/src/main/resources/static/css/PlaylistPage.css
+++ b/src/main/resources/static/css/PlaylistPage.css
@@ -10,6 +10,7 @@ header {
     top: 0;
     z-index: 1;
     background: linear-gradient(black, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5), rgba(0, 0, 0,0));
+    width: 100%;
 }
 
 main {
