--- a/src/main/resources/static/css/Common.css
+++ b/src/main/resources/static/css/Common.css
@@ -22,6 +22,8 @@
     margin: 0;
     padding: 0;
     user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
 }
 
 body {
@@ -78,8 +80,9 @@ header {
 
 footer {
     min-height: 6vh;
-    position: sticky;
+    position: fixed;
     z-index: 100;
+    width: 100%;
     bottom: 0;
     display: flex;
     align-items: center;
